# ruapc

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: release.yml  rust.yml
docs/: benchmark.md
ruapc/: Cargo.toml
ruapc-async/: Cargo.toml  README.md
ruapc-async/src/: lib.rs  task_supervisor.rs
ruapc-bufpool/: Cargo.toml  README.md
ruapc-bufpool/benches/: contention.rs  lazy_merge.rs
ruapc-bufpool/src/: aligned.rs  aligned_memory.rs  buddy.rs  buffer.rs  buffer_pool.rs  device.rs  devices.rs  intrusive_list.rs  key.rs  lib.rs  memory.rs  pool.rs  registered.rs  slab.rs  tcp_device.rs  thread_cache.rs
ruapc-bufpool/tests/: tests.rs
ruapc-core/: Cargo.toml  README.md
ruapc-core/src/: config.rs  error.rs  lib.rs  method_info.rs  msg.rs  payload.rs  task_supervisor.rs
ruapc-demo/: Cargo.toml
ruapc-demo/src/: lib.rs
ruapc-http/: Cargo.toml  README.md
ruapc-http/src/: http_socket.rs  http_socket_pool.rs  lib.rs
ruapc-macro/: Cargo.toml
ruapc-macro/src/: lib.rs
ruapc-macro/tests/: trybuild.rs
ruapc-macro/tests/ui/fail/: not_async.rs  not_async.stderr  on_struct.rs  on_struct.stderr  reserved_name.rs  reserved_name.stderr  wrong_arity.rs  wrong_arity.stderr
ruapc-macro/tests/ui/pass/: basic_service.rs
ruapc-memory/: Cargo.toml
ruapc-memory/src/: lib.rs
ruapc-rdma/: Cargo.toml  build.rs
ruapc-rdma-sys/: Cargo.toml
ruapc-rdma-sys/src/: error.rs  lib.rs  test_utils.rs
ruapc-rdma-sys/src/types/: buffer.rs  device_info.rs  mod.rs  wc.rs
ruapc-rdma-sys/src/verbs/: comp_channel.rs  completion_queue.rs  device.rs  device_list.rs  memory_region.rs  protection_domain.rs  queue_pair.rs
ruapc-rdma/examples/: ruapc_rdma_info.rs
ruapc-rdma/src/: comp_channel.rs  comp_queues.rs  config.rs  devices.rs  error.rs  fd_poll.rs  ffi.rs  lib.rs  queue_pair.rs  shim.c  shim.h  test_utils.rs  verbs.rs
ruapc-rdma/src/buf/: aligned_buffer.rs  buffer_pool.rs  mod.rs  rdma_buffer.rs
ruapc-rdma/src/types/: device_cap_flags.rs  device_info.rs  gid.rs  guid.rs  link_layer.rs  mod.rs  port_cap_flags.rs  port_cap_flags2.rs  wc.rs  wrid.rs
ruapc-rdma/src/verbs/: comp_channel.rs  completion_queue.rs  context.rs  device.rs  device_list.rs  memory_region.rs  mod.rs  protection_domain.rs  queue_pair.rs  wr_slots.rs
ruapc-tcp/: Cargo.toml  README.md
ruapc-tcp/src/: lib.rs  tcp_socket.rs  tcp_socket_pool.rs
ruapc-transport/: Cargo.toml  README.md
ruapc-transport/src/: lib.rs  socket_type.rs  traits.rs
ruapc-ws/: Cargo.toml  README.md
ruapc-ws/src/: lib.rs  web_socket.rs  web_socket_pool.rs
ruapc/benches/: echo.rs
ruapc/src/: bytes.rs  client.rs  context.rs  devices.rs  error.rs  lib.rs  listener.rs  memory.rs  metrics.rs  msg.rs  payload.rs  receiver.rs  router.rs  server.rs  socket.rs  socket_pool.rs  state.rs  task_supervisor.rs  waiter.rs
ruapc/src/core/: client.rs  context.rs  contract.rs  dispatch.rs  listener.rs  mod.rs  panic_guard.rs  request.rs  router.rs  server.rs  state.rs  with_buffer.rs
ruapc/src/device/: device_enum.rs  devices.rs  mod.rs  rdma_device.rs  tcp_device.rs
ruapc/src/http/: http_socket.rs  http_socket_pool.rs
ruapc/src/http/rapidoc/: index.html
ruapc/src/memory/: aligned_memory.rs  buffer.rs  buffer_pool.rs  memory_key.rs  memory_registration.rs  mod.rs  registered.rs  remote_buffer_info.rs  types.rs
ruapc/src/msg/: message.rs  mod.rs  payload.rs
ruapc/src/rdma/: config.rs  cq_poller.rs  endpoint.rs  event_loop.rs  mod.rs  path.rs  poller.rs  rdma_device.rs  rdma_device_refresher.rs  rdma_service.rs  rdma_socket.rs  rdma_socket_pool.rs  rdma_state.rs  test_utils.rs
ruapc/src/services/: memory_service.rs  meta_service.rs  mod.rs
ruapc/src/sockets/: mod.rs  socket.rs  socket_pool.rs
ruapc/src/sockets/http/: http_socket.rs  http_socket_pool.rs  mod.rs
ruapc/src/sockets/rdma/: endpoint.rs  event_loop.rs  mod.rs  queue_pair_ext.rs  rdma_buffer_ref.rs  rdma_service.rs  rdma_socket.rs  rdma_socket_pool.rs
ruapc/src/sockets/tcp/: mod.rs  tcp_socket.rs  tcp_socket_pool.rs
ruapc/src/sockets/unified/: mod.rs  unified_socket_pool.rs
ruapc/src/sockets/ws/: mod.rs  web_socket.rs  web_socket_pool.rs
ruapc/src/task/: mod.rs  receiver.rs  waiter.rs
ruapc/src/tcp/: mod.rs  tcp_socket.rs  tcp_socket_pool.rs
ruapc/src/unified/: unified_socket_pool.rs
ruapc/src/ws/: mod.rs  web_socket.rs  web_socket_pool.rs
ruapc/tests/: test_callback.rs  test_hello.rs  test_http_socket_pool.rs  test_production.rs  test_rdma_memory.rs  test_rdma_path.rs  test_remote_read.rs  test_remote_rw.rs  test_remote_write.rs  test_request_with_buffer.rs  test_robustness.rs  test_verify_uuid.rs
