[package]
name = "ruapc-bufpool"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]

[lints]
workspace = true
