[package]
name = "ruapc-bufpool"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
aliasable.workspace = true
dashmap.workspace = true
schemars.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
