[package]
name = "ruapc-bufpool"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
aliasable.workspace = true
dashmap.workspace = true
foldhash.workspace = true
schemars.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }

[[bench]]
name = "lazy_merge"
harness = false

[[bench]]
name = "contention"
harness = false

[lints]
workspace = true
