[package]
name = "ruapc-demo"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
ruapc = { path = "../ruapc" }

clap.workspace = true
schemars.workspace = true
serde.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
