[package]
name = "ruapc-macro"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "macro for ruapc service"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
