[package]
name = "ruapc-memory"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Aligned memory allocation for RDMA and high-performance I/O"
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true
