[package]
name = "ruapc-rdma"
version = "0.1.0"
description = "RDMA support for ruapc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ruapc-rdma-sys = { version = "0.1.2" }
bytes.workspace = true
dashmap.workspace = true
libc.workspace = true
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
