[package]
name = "ruapc-rdma"
version = "0.1.4"
description = "Low-level FFI bindings to libibverbs with type-safe device management for RDMA operations"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[features]
bin = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
libc.workspace = true
ruapc-bufpool = { version = "0.1.0", path = "../ruapc-bufpool" }
schemars.workspace = true
serde.workspace = true

[[bin]]
name = "ibv_devinfo"
path = "src/bin/ibv_devinfo.rs"
required-features = ["bin"]

[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
syn = { version = "2.0", features = ["full", "parsing"] }
prettyplease = "0.2"
