[package]
name = "ruapc-transport"
version = "0.1.0"
description = "Transport layer traits for the RuaPC RPC library"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ruapc-core = { version = "0.1.0", path = "../ruapc-core" }
ruapc-async = { version = "0.1.0", path = "../ruapc-async" }

bytes.workspace = true
clap.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde-inline-default.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
