[package]
name = "ruapc"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
ruapc-macro = { version = "0.1.0", path = "../ruapc-macro" }

bitflags.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
foldhash.workspace = true
humantime-serde.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde-inline-default.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[lints]
workspace = true
