[package]
name = "ruapc"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
rdma = ["ruapc-rdma"]
default = []

[dependencies]
ruapc-macro ={ version = "0.1.1", path = "../ruapc-macro" }
ruapc-rdma = { version = "0.1.0", path = "../ruapc-rdma", optional = true }

bitflags.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
foldhash.workspace = true
http-body-util.workspace = true
humantime-serde.workspace = true
hyper.workspace = true
hyper-tungstenite.workspace = true
hyper-util.workspace = true
indexmap.workspace = true
openapiv3.workspace = true
rmp-serde.workspace = true
schemars.workspace = true
serde.workspace = true
serde-inline-default.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
libc.workspace = true

[lints]
workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
