[package]
name = "ruapc"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
rdma = ["ruapc-rdma"]
default = []

[dependencies]
# The macro generates code against ruapc's internal glue API, so the two
# crates must be paired exactly (same reason serde pins serde_derive).
ruapc-macro = { version = "=0.2.0-alpha.1", path = "../ruapc-macro" }
ruapc-bufpool = { version = "0.2.0-alpha.1", path = "../ruapc-bufpool" }
ruapc-rdma = { version = "0.2.0-alpha.1", path = "../ruapc-rdma", optional = true }

arc-swap.workspace = true
bitflags.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
foldhash.workspace = true
http-body-util.workspace = true
humantime-serde.workspace = true
hyper.workspace = true
hyper-tungstenite.workspace = true
hyper-util.workspace = true
indexmap.workspace = true
metrics.workspace = true
openapiv3.workspace = true
rmp-serde.workspace = true
schemars.workspace = true
serde.workspace = true
serde-inline-default.workspace = true
serde_json.workspace = true
socket2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
libc.workspace = true

[lints]
workspace = true

[dev-dependencies]
# Self dev-dependency: enables the `rdma` feature for this crate's own unit,
# integration tests, and benches without forcing it on downstream users.
ruapc = { path = ".", features = ["rdma"] }

metrics-util = "0.20"
reqwest = { version = "0.12", features = ["json"] }

[[bench]]
name = "echo"
harness = false
